--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,7 +11,7 @@
                 <div class="alert alert-danger" role="alert">{{ flashError }}</div>
             {% endfor %}
 
-            <h1 class="h3 mb-3 font-weight-normal">S'enregistrer</h1>
+            <h1>S'enregistrer</h1>
             <span class="redline"></span>
 
             {{ form_start(registrationForm) }}
