--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,12 +5,11 @@
     <div class="container-fluid ">
         <div class="flex flex-column align-items-center justify-content-md-center full-height">
                 {% for new in news %}
-            <div class="col-md-4 justify-content-md-center flex align-items-center card">
+            <div class="col-md-4 justify-content-md-center flex align-items-center card card-news">
                 <h1>{{ new.title }}</h1>
             </div>
                 {% endfor %}
         {{ include ("include/_down_arrow.html.twig") }}
         </div>
     </div>
-                
 {% endblock %}
