--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -3,27 +3,34 @@
 {% block title %}{{ team.teamName }} {{ team.season }} - FC Rosheim{% endblock %}
 
 {% block content %}
-                <th>TeamName</th>
-                <td>{{ team.teamName }}</td>
-            </tr>
-            <tr>
-                <th>Season</th>
-                <td>{{ team.season }}</td>
-            </tr>
-            <tr>
-                <th>Picture</th>
-                <td>{{ team.picture }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ team.slug }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('team_index') }}">back to list</a>
-
-    <a href="{{ path('team_edit', {'id': team.id}) }}">edit</a>
-
-    {{ include('team/_delete_form.html.twig') }}
+<div class="container-fluid">
+    <div class="full-height flex align-items-center">
+        <aside class="col-md-3">
+            <div class="sidebar">
+                <ul>
+                    <a href="{{ path('profile', {'id': app.user.id}) }}"><li>Mes Informations</li></a>
+                    <a href="#"><li>Mon équipe favorite</li></a>
+                    <a href="#"><li>Modifier mes informations</li></a>
+                    <a href="{{path('app_logout')}}"><li id="logout">Se déconnecter</li></a>
+                </ul>
+            </div>
+        </aside>
+        <main class="col-md-4 offset-md-1">
+            <div class="card text-center">
+                {% if app.user %}
+                    {% if app.user.lastname and app.user.firstname != null %}
+                        <h4> Bonjour {{app.user.firstname}} {{app.user.lastname}}</h4>
+                    {% else %}
+                        <h4> Vous êtes connecté sur  {{ app.user.username }}</h4>
+                    {% endif %}
+                {% else %}
+                    <div class="mb-3">
+                        <p>Vous êtes connecté en tant que {{ app.user.username }}, </p><a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    </div>
+                {% endif %}
+                <span class="redline-center"></span>
+            </div>
+        </main>
+    </div>
+</div>
 {% endblock %}
