--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,4 +12,8 @@
         {{ include ("include/_down_arrow.html.twig") }}
         </div>
     </div>
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('news') }}
+{% endblock %}
 {% endblock %}
