--- a/templates/admin/usersedit.html.twig
+++ b/templates/admin/usersedit.html.twig
@@ -22,6 +22,7 @@
             <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
                 <div class="card">
                 <h1 class="display-2">Gestion des Utilisateurs</h1>
+                    {{ form_start(form, {attr: {class: 'form-user-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
                             <tr>
@@ -107,10 +108,8 @@
                             </tr>
                         </tbody>
                     </table>
-                <button class='btn btn-primary' id='admin_save_button'>Save</button>
-                </div>
-                <div>
-                    {{ include('admin/_form.html.twig') }}
+                    <button class='btn btn-primary' id='admin_save_button' type="submit">Save</button>
+                {{ form_end(form) }}
                 </div>
         </main>
     </div>
